--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 base="light"
-primaryColor="#3ec1b9"
-backgroundColor="#99dfdc"
-textColor="#FFFFFF"
-secondaryBackgroundColor="#50afae"
+primaryColor="#ffd4db"
+backgroundColor="#FFFFFF"
+textColor="#000000"
+secondaryBackgroundColor="#d3b5e5"
